# app/controllers/bus_controller.rb
@@ -5,6 +5,88 @@ module Sinatra
     module Routing
       module Bus
         def self.registered(app)
+          app.namespace '/v1/bus' do
+            #this should probably be a more specific error message where we error out!
+            bad_route_message = "umd.io doesn't know the bus route in your url. Full list at https://api.umd.io/v0/bus/routes"
+            bad_stop_message = "umd.io doesn't know the stop in your url. Full list at https://api.umd.io/v0/bus/routes"
+            bus_docs_url = "https://docs.umd.io/bus"
+            apiRoot = 'http://webservices.nextbus.com/service/publicJSONFeed?a=umd'
+            require 'net/http'
+
+            get do
+              resp = {
+                message: "This is the bus endpoint.",
+                docs: "https://docs.umd.io/bus/",
+              }
+              json resp
+            end
+
+            get '/routes' do
+              json Route.all.map{|r| r.to_v1_info}
+            end
+
+            get '/routes/:route_id' do
+              route_ids = params[:route_id].downcase.split(",")
+              route_ids.each {|route_id| halt 400, bad_url_error(bad_route_message, bus_docs_url) unless is_route_id? route_id}
+              routes = Route.where(route_id: route_ids).map {|r| r.to_v1}
+
+              halt 404, "No routes found" if not routes
+              json routes
+            end
+
+
+            get '/routes/:route_id/schedules' do
+              cache_control :public, :must_revalidate, max_age: 60*60
+
+              route_id = params[:route_id]
+              halt 400, bad_url_error(bad_route_message, bus_docs_url) unless is_route_id? route_id
+              json Schedule.where(route: route_id).map{|r| r.to_v1}
+            end
+
+            # next arriving buses for a particular stop on the route (in nextbus, the predictions)
+            # Not sure how/whether to set this one up for polling & adding to the database. leaving it for now
+            get '/routes/:route_id/arrivals/:stop_id' do
+              cache_control :public, :must_revalidate, max_age: 60
+
+              route_id = params[:route_id]
+              stop_id = params[:stop_id]
+
+              halt 400, bad_url_error(bad_route_message, bus_docs_url)  unless is_route_id? route_id
+              halt 400, bad_url_error(bad_stop_message, bus_docs_url) unless is_stop_id? stop_id
+              wrapRequest(apiRoot + "&command=predictions&r=#{route_id}&s=#{stop_id}")
+            end
+
+            # locations of buses on route
+            get '/routes/:route_id/locations' do
+              cache_control :public, :must_revalidate, :no_cache, max_age: 60
+
+              route_id = params[:route_id]
+
+              halt 400, bad_url_error(bad_route_message, bus_docs_url) unless is_route_id? route_id
+              halt 400, bad_url_error(bad_route_message) unless is_route_id? route_id
+              wrapRequest(apiRoot + "&command=vehicleLocations&r=#{route_id}")
+            end
+
+            # locations of all buses
+            get '/locations' do
+              cache_control :public, :must_revalidate, max_age: 60
+
+              wrapRequest(apiRoot + "&command=vehicleLocations")
+            end
+
+            # list the bus stops
+            get '/stops' do
+              json Stop.all.map{|s| s.to_v1_info}
+            end
+
+            # get info about a particular bus stop
+            get '/stops/:stop_id' do
+              stop_id = params[:stop_id]
+              halt 400, bad_url_error(bad_stop_message, bus_docs_url) unless is_stop_id? stop_id
+              json Stop.where(stop_id: stop_id).map {|s| s.to_v1}
+            end
+          end
+
           #this should probably be a more specific error message where we error out!
           bad_route_message = "umd.io doesn't know the bus route in your url. Full list at https://api.umd.io/v0/bus/routes"
           bad_stop_message = "umd.io doesn't know the stop in your url. Full list at https://api.umd.io/v0/bus/routes"
@@ -70,7 +152,7 @@ module Sinatra
             cache_control :public, :must_revalidate, :no_cache, max_age: 60
 
             route_id = params[:route_id]
-            
+
             halt 400, bad_url_error(bad_route_message, bus_docs_url) unless is_route_id? route_id
             halt 400, bad_url_error(bad_route_message) unless is_route_id? route_id
             wrapRequest(apiRoot + "&command=vehicleLocations&r=#{route_id}")
